fix gap in sm screens

--- a/src/components/PlaylistItem/styles.scss
+++ b/src/components/PlaylistItem/styles.scss
@@ -82,6 +82,7 @@
     }
     @include respond-to("small") {
       margin-left: 0;
+      gap: 0.5rem;
     }
   }
 
